# rust-tonic-tracing-otel

./: .gitignore  Cargo.toml  Readme.md
crates/greeter-client/: Cargo.toml
crates/greeter-client/src/: lib.rs  main.rs
crates/greeter-core/: Cargo.toml  build.rs
crates/greeter-core/src/: lib.rs
crates/greeter-server/: Cargo.toml
crates/greeter-server/src/: main.rs
crates/pygreeter/: Cargo.toml  greeter.py  pyproject.toml
crates/pygreeter/src/: lib.rs  otel_python.rs
