# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82.0"

[workspace.dependencies]
init-tracing-opentelemetry = "0.22"
tonic-tracing-opentelemetry = "0.21"
tracing-opentelemetry-instrumentation-sdk = "0.21"
opentelemetry = "0.25"
opentelemetry_sdk = "0.25"
tracing = "0.1"
tracing-opentelemetry = "0.26"

tokio = "1"
tonic = "0.12"
tonic-build = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tower = "0.5"
